# octomap_to_ellipsoids

./: CMakeLists.txt  README.md  package.xml
gmm/: Macros.h  MathLib.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  gmr.cpp  gmr.h  kmeans.cpp  kmeans.h  main.cpp
include/: ellipsoids_markers.hpp  octomap_to_ellipsoids.hpp
launch/: moveit_octomap_to_ellipsoids.launch  octomap_server_kinect.launch  octomap_to_ellipsoids.launch
src/: CMakeLists.txt  ellipsoids_markers.cpp  octomap_to_elipsoids.py  octomap_to_ellipsoids.cpp  octomap_to_ellipsoids_node.cpp  package.xml  setup.py
